--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8"> <!--codificação dos caracteres a serem lidos-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Portfólio</title> <!--indica o título do arquivo-->
-        <link rel="stylesheet" href="./styles/style.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
+        <link rel="stylesheet" href="style.css">
         <!-- documentação do html https://www.w3schools.com/html/html_intro.asp -->
         <!-- sites de paletas de cores https://colorhunt.co/ e https://coolors.co/ -->
         <!--site para importação de fontes https://fonts.google.com/ -->
@@ -13,68 +14,192 @@
     <body>
         
         <header>
-            <h1 id="titulo"><strong>RavenaFlix</strong></h1> <!--título de maior hierarquia com o elemento para chamar atenção em negrito-->
+            <img id="titulo" src="./assets/Ravenaflix (1).png">
             <nav class="menu"> <!--tag que define um menu de navegação-->
-                <a class="item-menu" href="">Search</a>
-                <a class="item-menu" href="index.html">Home</a> <!--define um link para outra página-->
-                <a class="item-menu" href="profile.html">Profile</a>
+                <input type="checkbox" id="search">
+                <label for="search">
+                    <h2 class="item-menu">Search</h2>
+                </label>
+                <input type="search" id="search-input" placeholder="Type here">
+                <input type="checkbox" id="home">
+                <label for="home">
+                    <a href="./index.html" class="item-menu">Home</a>
+                </label>
+                <input type="checkbox" id="profile">
+                <label for="profile">
+                    <h2 class="item-menu">Profile</h2>
+                </label>
+                <ul class="profile-lista">
+                    <li class="profile-lista-item">
+                        <a href="./profile.html" class="profile-lista-link">My account</a>
+                    </li>
+                    <li class="profile-lista-item">
+                        <a href="#" class="profile-lista-link">Favorites</a>
+                    </li>
+                    <li class="profile-lista-item">
+                        <a href="#" class="profile-lista-link">Seen</a>
+                    </li>
+                </ul>
             </nav>
         </header>
 
         <main>
-            <div class="introducao"></div>
+            <section class="introducao"></section>
+            
             <section class="inicio-filmes">
-                <div class="subtitulos">
-                    <h2>Disney</h2>
-                    <a class="see-more" href="disney.html">See more</a>
+                <div class="filmes">
+                    <div class="subtitulos">
+                        <h2>Disney</h2>
+                        <a class="see-more" href="disney.html">See more</a>
+                    </div>
+                    <div class="swiper">
+                        <div class="swiper-button-prev"></div>
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <img class="poster" src="./disney-assets/branca_de_neve.webp" alt="A Branca de Neve">
+                            </div>
+                            <div class="swiper-slide">
+                                <img class="poster" src="./disney-assets/cinderella.jpg" alt="Cinderella">
+                            </div>
+                            <div class="swiper-slide">
+                                <img class="poster" src="./disney-assets/detona_ralph.jpg" alt="Detona Ralph">
+                            </div>
+                            <div class="swiper-slide">
+                                <img class="poster" src="./disney-assets/enrolados.webp" alt="Enrolados">
+                            </div>
+                            <div class="swiper-slide">
+                                <img class="poster" src="./disney-assets/princesa_sapo.webp" alt="A Princesa e o Sapo">
+                            </div>
+                            <div class="swiper-slide">
+                                <img class="poster" src="./disney-assets/zootopia.jpg" alt="Zootopia">
+                            </div>
+                            <div class="swiper-slide">
+                                <img class="poster" src="./disney-assets/encanto.jpg" alt="Encanto">
+                            </div>
+                            <div class="swiper-slide">
+                                <img class="poster" src="./disney-assets/sleeping_beauty.jpg" alt="A Bela Adormecida">
+                            </div>
+                            <div class="swiper-slide">
+                                <img class="poster" src="./disney-assets/moana.webp" alt="Moana">
+                            </div>
+                            <div class="swiper-slide">
+                                <img class="poster" src="./disney-assets/frozen.jpg" alt="Frozen">
+                            </div>
+                        </div>
+                        <div class="swiper-button-next"></div>
+                    </div>
                 </div>
                 <div class="filmes">
-                    <img class="poster" src="./assets/branca_de_neve.webp" alt="A Branca de Neve">
-                    <img class="poster" src="./assets/cinderella.jpg" alt="Cinderella">
-                    <img class="poster" src="./assets/detona_ralph.jpg" alt="Detona Ralph">
-                    <img class="poster" src="./assets/enrolados.webp" alt="Enrolados">
-                    <img class="poster" src="./assets/princesa_sapo.webp" alt="A Princesa e o Sapo">
-                </div>
-                <div class="subtitulos">
-                    <h2>Pixar</h2>
-                    <a class="see-more" href="pixar.html">See more</a>
+                    <div class="subtitulos">
+                        <h2>Pixar</h2>
+                        <a class="see-more" href="pixar.html">See more</a>
+                    </div>
+                    <div class="swiper">
+                        <div class="swiper-button-prev"></div>
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <img class="poster" src="./pixar-assets/divertidamente.jpg" alt="Divertidamente">
+                            </div>
+                            <div class="swiper-slide">
+                                <img class="poster" src="./pixar-assets/monstros_sa.jpg" alt="Monstros SA">
+                            </div>
+                            <div class="swiper-slide">
+                                <img class="poster" src="./pixar-assets/ratatouille.jpg" alt="Ratatouille">
+                            </div>
+                            <div class="swiper-slide">
+                                <img class="poster" src="./pixar-assets/toy_story.jpg" alt="Toy Story">
+                            </div>
+                            <div class="swiper-slide">
+                                <img class="poster" src="./pixar-assets/walle.jpg" alt="Wall-E">
+                            </div>
+                            <div class="swiper-slide">
+                                <img class="poster" src="./pixar-assets/cars.jpg" alt="Carros">
+                            </div>
+                            <div class="swiper-slide">
+                                <img class="poster" src="./pixar-assets/elemental.webp" alt="Elementos">
+                            </div>
+                            <div class="swiper-slide">
+                                <img class="poster" src="./pixar-assets/incredibles.jpg" alt="Os Incríveis">
+                            </div>
+                            <div class="swiper-slide">
+                                <img class="poster" src="./pixar-assets/red.jpg" alt="Red">
+                            </div>
+                            <div class="swiper-slide">
+                                <img class="poster" src="./pixar-assets/nemo.webp" alt="Procurando Nemo">
+                            </div>
+                        </div>
+                        <div class="swiper-button-next"></div>
+                    </div>
                 </div>
                 <div class="filmes">
-                    <img class="poster" src="./assets/divertidamente.jpg" alt="Divertidamente">
-                    <img class="poster" src="./assets/monstros_sa.jpg" alt="Monstros SA">
-                    <img class="poster" src="./assets/ratatouille.jpg" alt="Ratatouille">
-                    <img class="poster" src="./assets/toy_story.jpg" alt="Toy Story">
-                    <img class="poster" src="./assets/walle.jpg" alt="Wall-E">
-                </div>
-                <div class="subtitulos">
-                    <h2>Horror</h2>
-                    <a class="see-more" href="horror.html">See more</a>
+                    <div class="subtitulos">
+                        <h2>Horror</h2>
+                        <a class="see-more" href="horror.html">See more</a>
+                    </div>
+                    <div class="swiper">
+                        <div class="swiper-button-prev"></div>
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <img class="poster" src="./horror-assets/jogos_mortais.webp" alt="Jogos Mortais">
+                            </div>
+                            <div class="swiper-slide">
+                                <img class="poster" src="./horror-assets/invocacao_mal.jpg" alt="Invocação do mal">
+                            </div>
+                            <div class="swiper-slide">
+                                <img class="poster" src="./horror-assets/corra.webp" alt="Corra!">
+                            </div>
+                            <div class="swiper-slide">
+                                <img class="poster" src="./horror-assets/lugar_silencioso.webp" alt="Um Lugar Silencioso">
+                            </div>
+                            <div class="swiper-slide">
+                                <img class="poster" src="./horror-assets/midsonmar.jpg" alt="Midsonmar">
+                            </div>
+                        </div>
+                        <div class="swiper-button-next"></div>
+                    </div>
                 </div>
                 <div class="filmes">
-                    <img class="poster" src="./assets/jogos_mortais.webp" alt="Jogos Mortais">
-                    <img class="poster" src="./assets/invocacao_mal.jpg" alt="Invocação do mal">
-                    <img class="poster" src="./assets/corra.webp" alt="Corra!">
-                    <img class="poster" src="./assets/lugar_silencioso.webp" alt="Um Lugar Silencioso">
-                    <img class="poster" src="./assets/midsonmar.jpg" alt="Midsonmar">
-                </div>
-                <div class="subtitulos">
-                    <h2>Romantic comedy</h2>
-                    <a class="see-more" href="comedies.html">See more</a>
-                </div>
-                <div class="filmes">
-                    <img class="poster" src="./assets/Happiest_Season.png" alt="Happiest Season">
-                    <img class="poster" src="./assets/na_sua_casa_ou_na_minha.webp" alt="Na sua casa ou na minha?">
-                    <img class="poster" src="./assets/10_coisas.webp" alt="10 coisas que odeio em você">
-                    <img class="poster" src="./assets/tratamento_realeza.webp" alt="Tratamento de Realeza">
-                    <img class="poster" src="./assets/meia_noite_paris.webp" alt="Meia-noite em Paris">
+                    <div class="subtitulos">
+                        <h2>Romantic comedy</h2>
+                        <a class="see-more" href="comedies.html">See more</a>
+                    </div>
+                    <div class="swiper">
+                        <div class="swiper-button-prev"></div>
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <img class="poster" src="./romance-assets/Happiest_Season.png" alt="Happiest Season">
+                            </div>
+                            <div class="swiper-slide">
+                                <img class="poster" src="./romance-assets/na_sua_casa_ou_na_minha.webp" alt="Na sua casa ou na minha?">
+                            </div>
+                            <div class="swiper-slide">
+                                <img class="poster" src="./romance-assets/10_coisas.webp" alt="10 coisas que odeio em você">
+                            </div>
+                            <div class="swiper-slide">
+                                <img class="poster" src="./romance-assets/tratamento_realeza.webp" alt="Tratamento de Realeza">
+                            </div>
+                            <div class="swiper-slide">
+                                <img class="poster" src="./romance-assets/meia_noite_paris.webp" alt="Meia-noite em Paris">
+                            </div>
+                        </div>
+                        <div class="swiper-button-next"></div>
+                    </div>
                 </div>
             </section>
+
         </main>
 
         <footer>
-            <p>Feito por <strong>R. L. Lacava</strong></p>
+            <p>Developed by <strong>R. L. Lacava</strong></p>
         </footer>
 
+        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+        <script>
+            const swiper = new Swiper('.swiper', {
+                spaceBetween: 0,
+                slidesPerView: 5,
+            });
+        </script>
     </body>
 
 </html>
