--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
         <meta charset="UTF-8"> <!--codificação dos caracteres a serem lidos-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Portfólio</title> <!--indica o título do arquivo-->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
         <link rel="stylesheet" href="style.css">
         <!-- documentação do html https://www.w3schools.com/html/html_intro.asp -->
         <!-- sites de paletas de cores https://colorhunt.co/ e https://coolors.co/ -->
@@ -15,19 +14,23 @@
         
         <header>
             <img id="titulo" src="./assets/Ravenaflix (1).png">
-            <nav class="menu"> <!--tag que define um menu de navegação-->
+            <nav class="menu">
                 <input type="checkbox" id="search">
-                <label for="search">
+                <label class="menu-option" for="search">
                     <h2 class="item-menu">Search</h2>
+                    <img class="header-icon" src="./assets/search.png" alt="Search icon">
                 </label>
                 <input type="search" id="search-input" placeholder="Type here">
                 <input type="checkbox" id="home">
-                <label for="home">
+                <label class="menu-option" for="home">
                     <a href="./index.html" class="item-menu">Home</a>
+                    <img class="header-icon" src="./assets/home.png" alt="Home icon">
                 </label>
+
                 <input type="checkbox" id="profile">
-                <label for="profile">
+                <label class="menu-option" for="profile">
                     <h2 class="item-menu">Profile</h2>
+                    <img class="header-icon" src="./assets/profile.png" alt="Profile icon">
                 </label>
                 <ul class="profile-lista">
                     <li class="profile-lista-item">
@@ -40,149 +43,135 @@
                         <a href="#" class="profile-lista-link">Seen</a>
                     </li>
                 </ul>
+
             </nav>
+
         </header>
 
         <main>
             <section class="introducao"></section>
             
-            <section class="inicio-filmes">
-                <div class="filmes">
-                    <div class="subtitulos">
-                        <h2>Disney</h2>
+            <section class="carroussel-movies">
+                <div class="movies">
+                    <div class="subtitles">
+                        <h2 class="subtitles-title">Disney</h2>
                         <a class="see-more" href="disney.html">See more</a>
                     </div>
                     <div class="swiper">
-                        <div class="swiper-button-prev"></div>
-                        <div class="swiper-wrapper">
-                            <div class="swiper-slide">
-                                <img class="poster" src="./disney-assets/branca_de_neve.webp" alt="A Branca de Neve">
-                            </div>
-                            <div class="swiper-slide">
-                                <img class="poster" src="./disney-assets/cinderella.jpg" alt="Cinderella">
-                            </div>
-                            <div class="swiper-slide">
-                                <img class="poster" src="./disney-assets/detona_ralph.jpg" alt="Detona Ralph">
-                            </div>
-                            <div class="swiper-slide">
-                                <img class="poster" src="./disney-assets/enrolados.webp" alt="Enrolados">
-                            </div>
-                            <div class="swiper-slide">
-                                <img class="poster" src="./disney-assets/princesa_sapo.webp" alt="A Princesa e o Sapo">
-                            </div>
-                            <div class="swiper-slide">
-                                <img class="poster" src="./disney-assets/zootopia.jpg" alt="Zootopia">
-                            </div>
-                            <div class="swiper-slide">
-                                <img class="poster" src="./disney-assets/encanto.jpg" alt="Encanto">
-                            </div>
-                            <div class="swiper-slide">
-                                <img class="poster" src="./disney-assets/sleeping_beauty.jpg" alt="A Bela Adormecida">
-                            </div>
-                            <div class="swiper-slide">
-                                <img class="poster" src="./disney-assets/moana.webp" alt="Moana">
-                            </div>
-                            <div class="swiper-slide">
-                                <img class="poster" src="./disney-assets/frozen.jpg" alt="Frozen">
-                            </div>
+                        <div class="movie-input">
+                            <img class="poster" src="./disney-assets/branca_de_neve.webp" alt="Snow White">
                         </div>
-                        <div class="swiper-button-next"></div>
+                        <div class="movie-input">
+                            <img class="poster" src="./disney-assets/cinderella.jpg" alt="Cinderella">
+                        </div>
+                        <div class="movie-input">
+                            <img class="poster" src="./disney-assets/detona_ralph.jpg" alt="Wreck it Ralph">
+                        </div>
+                        <div class="movie-input">
+                            <img class="poster" src="./disney-assets/enrolados.webp" alt="Tangled">
+                        </div>
+                        <div class="movie-input">
+                            <img class="poster" src="./disney-assets/princesa_sapo.webp" alt="The princess and the frog">
+                        </div>
+                        <div class="movie-input">
+                            <img class="poster" src="./disney-assets/zootopia.jpg" alt="Zootopia">
+                        </div>
+                        <div class="movie-input">
+                            <img class="poster" src="./disney-assets/encanto.jpg" alt="Encanto">
+                        </div>
+                        <div class="movie-input">
+                            <img class="poster" src="./disney-assets/sleeping_beauty.jpg" alt="Sleeping Beauty">
+                        </div>
+                        <div class="movie-input">
+                            <img class="poster" src="./disney-assets/moana.webp" alt="Moana">
+                        </div>
+                        <div class="movie-input">
+                            <img class="poster" src="./disney-assets/frozen.jpg" alt="Frozen">
+                        </div>
                     </div>
                 </div>
-                <div class="filmes">
-                    <div class="subtitulos">
-                        <h2>Pixar</h2>
+                <div class="movies">
+                    <div class="subtitles">
+                        <h2 class="subtitles-title">Pixar</h2>
                         <a class="see-more" href="pixar.html">See more</a>
                     </div>
                     <div class="swiper">
-                        <div class="swiper-button-prev"></div>
-                        <div class="swiper-wrapper">
-                            <div class="swiper-slide">
-                                <img class="poster" src="./pixar-assets/divertidamente.jpg" alt="Divertidamente">
+                            <div class="movie-input">
+                                <img class="poster" src="./pixar-assets/divertidamente.jpg" alt="Inside out">
                             </div>
-                            <div class="swiper-slide">
-                                <img class="poster" src="./pixar-assets/monstros_sa.jpg" alt="Monstros SA">
+                            <div class="movie-input">
+                                <img class="poster" src="./pixar-assets/monstros_sa.jpg" alt="Monsters Inc.">
                             </div>
-                            <div class="swiper-slide">
+                            <div class="movie-input">
                                 <img class="poster" src="./pixar-assets/ratatouille.jpg" alt="Ratatouille">
                             </div>
-                            <div class="swiper-slide">
+                            <div class="movie-input">
                                 <img class="poster" src="./pixar-assets/toy_story.jpg" alt="Toy Story">
                             </div>
-                            <div class="swiper-slide">
+                            <div class="movie-input">
                                 <img class="poster" src="./pixar-assets/walle.jpg" alt="Wall-E">
                             </div>
-                            <div class="swiper-slide">
-                                <img class="poster" src="./pixar-assets/cars.jpg" alt="Carros">
+                            <div class="movie-input">
+                                <img class="poster" src="./pixar-assets/cars.jpg" alt="Cars">
                             </div>
-                            <div class="swiper-slide">
-                                <img class="poster" src="./pixar-assets/elemental.webp" alt="Elementos">
+                            <div class="movie-input">
+                                <img class="poster" src="./pixar-assets/elemental.webp" alt="Elements">
                             </div>
-                            <div class="swiper-slide">
-                                <img class="poster" src="./pixar-assets/incredibles.jpg" alt="Os Incríveis">
+                            <div class="movie-input">
+                                <img class="poster" src="./pixar-assets/incredibles.jpg" alt="Incredibles">
                             </div>
-                            <div class="swiper-slide">
+                            <div class="movie-input">
                                 <img class="poster" src="./pixar-assets/red.jpg" alt="Red">
                             </div>
-                            <div class="swiper-slide">
-                                <img class="poster" src="./pixar-assets/nemo.webp" alt="Procurando Nemo">
+                            <div class="movie-input">
+                                <img class="poster" src="./pixar-assets/nemo.webp" alt="Finding Nemo">
                             </div>
-                        </div>
-                        <div class="swiper-button-next"></div>
                     </div>
                 </div>
-                <div class="filmes">
-                    <div class="subtitulos">
-                        <h2>Horror</h2>
+                <div class="movies">
+                    <div class="subtitles">
+                        <h2 class="subtitles-title">Horror</h2>
                         <a class="see-more" href="horror.html">See more</a>
                     </div>
                     <div class="swiper">
-                        <div class="swiper-button-prev"></div>
-                        <div class="swiper-wrapper">
-                            <div class="swiper-slide">
-                                <img class="poster" src="./horror-assets/jogos_mortais.webp" alt="Jogos Mortais">
+                            <div class="movie-input">
+                                <img class="poster" src="./horror-assets/jogos_mortais.webp" alt="Saw">
                             </div>
-                            <div class="swiper-slide">
+                            <div class="movie-input">
                                 <img class="poster" src="./horror-assets/invocacao_mal.jpg" alt="Invocação do mal">
                             </div>
-                            <div class="swiper-slide">
-                                <img class="poster" src="./horror-assets/corra.webp" alt="Corra!">
+                            <div class="movie-input">
+                                <img class="poster" src="./horror-assets/corra.webp" alt="Run!">
                             </div>
-                            <div class="swiper-slide">
-                                <img class="poster" src="./horror-assets/lugar_silencioso.webp" alt="Um Lugar Silencioso">
+                            <div class="movie-input">
+                                <img class="poster" src="./horror-assets/lugar_silencioso.webp" alt="A Quiet Place">
                             </div>
-                            <div class="swiper-slide">
+                            <div class="movie-input">
                                 <img class="poster" src="./horror-assets/midsonmar.jpg" alt="Midsonmar">
                             </div>
-                        </div>
-                        <div class="swiper-button-next"></div>
                     </div>
                 </div>
-                <div class="filmes">
-                    <div class="subtitulos">
-                        <h2>Romantic comedy</h2>
+                <div class="movies">
+                    <div class="subtitles">
+                        <h2 class="subtitles-title">Romantic comedy</h2>
                         <a class="see-more" href="comedies.html">See more</a>
                     </div>
                     <div class="swiper">
-                        <div class="swiper-button-prev"></div>
-                        <div class="swiper-wrapper">
-                            <div class="swiper-slide">
+                            <div class="movie-input">
                                 <img class="poster" src="./romance-assets/Happiest_Season.png" alt="Happiest Season">
                             </div>
-                            <div class="swiper-slide">
-                                <img class="poster" src="./romance-assets/na_sua_casa_ou_na_minha.webp" alt="Na sua casa ou na minha?">
+                            <div class="movie-input">
+                                <img class="poster" src="./romance-assets/na_sua_casa_ou_na_minha.webp" alt="Your Home or Mine?">
                             </div>
-                            <div class="swiper-slide">
-                                <img class="poster" src="./romance-assets/10_coisas.webp" alt="10 coisas que odeio em você">
+                            <div class="movie-input">
+                                <img class="poster" src="./romance-assets/10_coisas.webp" alt="10 Things I Hate About You">
                             </div>
-                            <div class="swiper-slide">
-                                <img class="poster" src="./romance-assets/tratamento_realeza.webp" alt="Tratamento de Realeza">
+                            <div class="movie-input">
+                                <img class="poster" src="./romance-assets/tratamento_realeza.webp" alt="Royalty Treatment">
                             </div>
-                            <div class="swiper-slide">
-                                <img class="poster" src="./romance-assets/meia_noite_paris.webp" alt="Meia-noite em Paris">
+                            <div class="movie-input">
+                                <img class="poster" src="./romance-assets/meia_noite_paris.webp" alt="Midnight in Paris">
                             </div>
-                        </div>
-                        <div class="swiper-button-next"></div>
                     </div>
                 </div>
             </section>
@@ -192,14 +181,6 @@
         <footer>
             <p>Developed by <strong>R. L. Lacava</strong></p>
         </footer>
-
-        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-        <script>
-            const swiper = new Swiper('.swiper', {
-                spaceBetween: 0,
-                slidesPerView: 5,
-            });
-        </script>
     </body>
 
 </html>
