--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                     <img class="header-icon" src="./assets/search.png" alt="Search icon">
                 </label>
                 <input type="search" id="search-input" placeholder="Type here">
+
                 <input type="checkbox" id="home">
                 <label class="menu-option" for="home">
                     <a href="./index.html" class="item-menu">Home</a>
@@ -43,13 +44,13 @@
                         <a href="#" class="profile-lista-link">Seen</a>
                     </li>
                 </ul>
-
             </nav>
-
         </header>
 
         <main>
-            <section class="introducao"></section>
+            <section class="introducao">
+                <img class="wallpaper-intro" src="/assets/wallpaper.jpg" alt="Wallpaper intro">
+            </section>
             
             <section class="carroussel-movies">
                 <div class="movies">
