--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <a href="./profile.html" class="profile-lista-link">My account</a>
                     </li>
                     <li class="profile-lista-item">
-                        <a href="#" class="profile-lista-link">Favorites</a>
+                        <a href="./favorites.html" class="profile-lista-link">Favorites</a>
                     </li>
                     <li class="profile-lista-item">
                         <a href="#" class="profile-lista-link">Seen</a>
