--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
                 <input type="checkbox" id="home">
                 <label class="menu-option" for="home">
-                    <a href="./index.html" class="item-menu">Home</a>
+                    <b><a href="./index.html" class="item-menu">Home</a></b>
                     <img class="header-icon" src="./assets/home.png" alt="Home icon">
                 </label>
 
@@ -150,6 +150,21 @@
                             <div class="movie-input">
                                 <img class="poster" src="./horror-assets/midsonmar.jpg" alt="Midsonmar">
                             </div>
+                            <div class="movie-input">
+                                <img class="poster" src="./horror-assets/Annabelle.jpg" alt="Annabelle">
+                            </div>
+                            <div class="movie-input">
+                                <img class="poster" src="./horror-assets/casa_monstro.jpg" alt="A Casa Monstro">
+                            </div>
+                            <div class="movie-input">
+                                <img class="poster" src="./horror-assets/chuck.jpg" alt="Chucky">
+                            </div>
+                            <div class="movie-input">
+                                <img class="poster" src="./horror-assets/it.jpg" alt="It">
+                            </div>
+                            <div class="movie-input">
+                                <img class="poster" src="./horror-assets/the_ring.jpg" alt="The Ring">
+                            </div>
                     </div>
                 </div>
                 <div class="movies">
@@ -172,6 +187,21 @@
                             </div>
                             <div class="movie-input">
                                 <img class="poster" src="./romance-assets/meia_noite_paris.webp" alt="Midnight in Paris">
+                            </div>
+                            <div class="movie-input">
+                                <img class="poster" src="./romance-assets/casa_comigo.jpg" alt="Casa Comigo">
+                            </div>
+                            <div class="movie-input">
+                                <img class="poster" src="./romance-assets/notting_hill.jpg" alt="Notting Hill">
+                            </div>
+                            <div class="movie-input">
+                                <img class="poster" src="./romance-assets/the_ugly_truth.jpg" alt="The Ugly Truth">
+                            </div>
+                            <div class="movie-input">
+                                <img class="poster" src="./romance-assets/me_before_you.jpg" alt="Me Before You">
+                            </div>
+                            <div class="movie-input">
+                                <img class="poster" src="./romance-assets/Holidate.png" alt="Holidate">
                             </div>
                     </div>
                 </div>
